feat: Enhance backend structure and introduce new features
- ✅ Added new scripts for file name handling and testing file name API
- ✅ Updated package.json with new script entries
- ✅ Removed unused patient and visit models and routes to streamline the codebase
- ✅ Introduced file_name field in the site database for improved data management
- ✅ Updated site lookup responses to include file name information

This commit improves the backend's functionality and organization, focusing on data management and reducing unnecessary complexity.

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "test-frontend-integration": "node scripts/test-frontend-integration.js",
     "verify-site-specific-usage": "node scripts/verify-site-specific-usage.js",
     "setup-user-table": "node scripts/setup-user-table.js",
-    "test-real-auth": "node scripts/test-real-auth.js"
+    "test-real-auth": "node scripts/test-real-auth.js",
+    "add-file-name-field": "node scripts/add-file-name-field.js",
+    "test-file-name-api": "node scripts/test-file-name-api.js"
   },
   "keywords": [
     "medical",
