--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^6.0.2",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
