--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run build && npx serve -s dist -l 3000"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -45,7 +46,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.7.0",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
