--- a/backend/package.json
+++ b/backend/package.json
@@ -47,7 +47,8 @@
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "sequelize": "^6.35.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
