--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,2 @@
-# Development Environment Variables
 VITE_API_URL=http://localhost:3001
-VITE_APP_TITLE=PreART Medical Management System (Dev)
-VITE_APP_VERSION=1.0.0-dev
-VITE_APP_ENVIRONMENT=development
+VITE_WS_URL=http://localhost:3001
