--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
